.stylelintrc.json, css,addbook.css.css/index.css, css/nav.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <nav>
       <a href="#">Awesome Books</a>
-      <ul>
+      <ul class="nav-ul">
         <li><a href="#book-list" class="active">List</a></li>
         <li><a href="#add-book">Add book</a></li>
         <li><a href="#contact-info">Contact</a></li>
